<resources>
    <string name="app_name">Codigo Plataforma V2</string>
    <string name="WELCOME">Welcome</string>
    <string name="welcome_text">Welcome to Codigo Plataforma the app. Please use your username and password to Login into app or Signup.</string>
    <string name="btn_login">Login</string>
    <string name="btn_getstarted">Get Started</string>
    <string name="signup">Sign Up</string>
    <string name="signup_text">Create a username and password to sign up or sign up using Google or Facebook.</string>
    <string name="log_in">Login</string>
    <string name="enter_email_id">Enter your email id</string>
    <string name="create_password">Create password</string>
    <string name="reenter_password">Re-enter the password</string>
    <string name="sign_up_with_google">Sign Up with Google</string>
    <string name="sign_up_with_facebook">Sign Up with Facebook</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="onboard1">Learn, innovate and grow</string>
    <string name="onboard1_text">Here students take their foot into the learning environment to gather new skills that makes them the future’s software developer. </string>
    <string name="onboard2">Take up your next step</string>
    <string name="onboard2_text">Learn with bunch of other student and advance in your field. Learn about projects, placements, contests and much more.</string>
    <string name="onboard3">Solve your queries faster</string>
    <string name="onboard3_text">Build projects and stay ahead of the game. Struck somewhere? No worries, you’ve got a community to help discuss your queries and issues.</string>
    <string name="name_is_btn_but_it_is_actually_a_tv">name is btn but it is actually a tv</string>
    <string name="linked_to_pager_adapter">linked to pager adapter</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="login">Login</string>
    <string name="back">back</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="Sign_in_text">Please enter your username and password to login.</string>
    <string name="username">Username</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="img_for_slider_layout">img for slider layout</string>
    <string name="home">Home</string>
    <string name="calendar">Calendar</string>
    <string name="github">Github</string>
    <string name="settings">Settings</string>
    <string name="web_development">Web development</string>

</resources>