<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:flow_horizontalAlign="center">

    <ImageView
        android:id="@+id/img_on_boarding"
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:layout_marginTop="0dp"
        android:src="@drawable/on_boarding_1"
        android:contentDescription="@string/img_for_slider_layout">

    </ImageView>

    <TextView
        android:id="@+id/tv_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:padding="5dp"
        android:text="@string/onboard1"
        android:textColor="@color/black"
        android:textSize="24dp">

    </TextView>

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:padding="5dp"
        android:text="@string/onboard1_text"
        android:textColor="@color/black"
        android:textSize="16dp">

    </TextView>

</LinearLayout>