<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sign_Up"
    android:fillViewport="true"
    android:background="@color/orange"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_weight="0.5">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <Button
                    android:id="@+id/btn_backbtn"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/back_arrow"
                    android:layout_marginTop="10dp"
                    android:gravity="left"
                    android:contentDescription="back"
                    app:backgroundTint="@color/white">
                </Button>
                <View android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:layout_weight="1">
                </View>

                <Button
                    android:id="@+id/btn_login_from_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/log_in"
                    android:background="#00000000"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppinsbold"
                    android:textSize="18dp"
                    android:layout_gravity="bottom">
                </Button>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup"
                    android:fontFamily="@font/poppinsbold"
                    android:textSize="36sp"
                    android:textColor="@color/white">
                </TextView>
                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_text"
                    android:textSize="22dp"
                    android:textColor="@color/white">
                </TextView>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_white_fillup_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="3dp"
            android:layout_weight="4"
            android:background="@drawable/signupshape">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/dark_grey"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:fontFamily="@font/poppinsbold">

            </TextView>

            <EditText
                android:id="@+id/et_enter_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email_id"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:padding="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/edittextshapes">

            </EditText>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/dark_grey"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:fontFamily="@font/poppinsbold">

            </TextView>
            <EditText
                android:id="@+id/et_enter_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:padding="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/edittextshapes">
            </EditText>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password"
                android:textColor="@color/dark_grey"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"

                android:fontFamily="@font/poppinsbold">
            </TextView>
            <EditText
                android:id="@+id/et_reenter_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reenter_password"
                android:textColorHint="@color/grey"
                android:inputType="textPassword"
                android:padding="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/edittextshapes">

            </EditText>

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_gravity="center"
                android:text="@string/signup"
                android:drawableRight="@drawable/login_arrow"
                android:paddingRight="125dp"
                android:paddingLeft="125dp"
                android:background="@drawable/buttonlogin"
                app:backgroundTint="@color/black">

            </Button>

            <View
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_height="1dp"
                android:background="@color/grey">

            </View>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_signup_through_google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center"
                android:text="@string/sign_up_with_google"
                android:fontFamily="@font/poppinsbold"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:drawableRight="@drawable/foreward_arrow_black"
                android:drawableLeft="@drawable/google_icon"
                android:background="@drawable/goole_facebook_shape"
                android:paddingLeft="40dp"
                android:paddingRight="40dp">

            </androidx.appcompat.widget.AppCompatButton>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_signup_through_facebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center"
                android:text="@string/sign_up_with_facebook"
                android:fontFamily="@font/poppinsbold"
                android:textAllCaps="false"
                android:gravity="center"
                android:textColor="@color/black"
                android:drawableLeft="@drawable/facebook_icon"
                android:drawableRight="@drawable/foreward_arrow_black"
                android:background="@drawable/goole_facebook_shape"
                android:paddingLeft="30dp"
                android:paddingRight="30dp">

            </androidx.appcompat.widget.AppCompatButton>

        </LinearLayout>

    </LinearLayout>

</ScrollView>